compiler/testData/diagnostics/tests/regressions/ea66984.fir.kt
// DIAGNOSTICS: -NO_VALUE_FOR_PARAMETER
class Tree<T>(T <!SYNTAX!>element<!>, <!SYNTAX!><!>Tree<T><!SYNTAX!><!> left<!SYNTAX!><!>, <!SYNTAX!><!>Tree<T><!SYNTAX!><!> right<!SYNTAX!><!>) {}